exports[`Toggle should render a default toggle 1`] = `
<div
  aria-hidden="true"
  class="toggle" />
`;

exports[`Toggle should render an animated toggle 1`] = `
<div
  aria-hidden="true"
  class="toggle">
  <div
    aria-hidden="false"
    class="rah-static"
    style="height:0px;overflow:hidden;">
    <div>
      Test
    </div>
  </div>
</div>
`;

exports[`Toggle should render an open toggle 1`] = `
<div
  aria-hidden="false"
  class="toggle">
  Test
</div>
`;
